// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nature-ui/button Button rernders correctly 1`] = `
<DocumentFragment>
  <button
    class="px-4 focus:shadow-outline focus:outline-none rounded font-semibold relative overflow-hidden align-middle inline-flex justify-center items-center leading-normal bg-gray-200 text-gray-700 hover:bg-gray-300 css-mqia37 css-1x86u9b css-14d0z92"
  />
</DocumentFragment>
`;

exports[`@nature-ui/button shows spinner and loading text if isLoading and loadingText 1`] = `
<DocumentFragment>
  <button
    class="opacity-50 px-4 focus:shadow-outline focus:outline-none rounded font-semibold relative overflow-hidden align-middle inline-flex justify-center items-center leading-normal bg-gray-200 text-gray-700 hover:bg-gray-300 cursor-not-allowed css-mqia37 css-1x86u9b css-14d0z92"
    data-loading=""
    disabled=""
  >
    <span
      class="align-middle relative"
    >
      <span
        class="animation-1nvx475 border-2 w-4 h-4 inline-block overflow-hidden border-transparent border-t-2 align-middle text-currentColor css-hxvqwd"
        style="border-top: 2px solid currentColor; border-left: 2px solid currentColor;"
      >
        <span
          class="css-e941bk"
        >
          Loading...
        </span>
      </span>
      <span
        class="ml-2"
      >
        Submitting
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`@nature-ui/button shows spinner if isLoading 1`] = `
<DocumentFragment>
  <button
    class="opacity-50 px-4 focus:shadow-outline focus:outline-none rounded font-semibold relative overflow-hidden align-middle inline-flex justify-center items-center leading-normal bg-gray-200 text-gray-700 hover:bg-gray-300 cursor-not-allowed css-mqia37 css-1x86u9b css-14d0z92"
    data-loading=""
    disabled=""
  >
    <span
      class="align-middle absolute"
    >
      <span
        class="animation-1nvx475 border-2 w-4 h-4 inline-block overflow-hidden border-transparent border-t-2 align-middle text-currentColor css-hxvqwd"
        style="border-top: 2px solid currentColor; border-left: 2px solid currentColor;"
      >
        <span
          class="css-e941bk"
        >
          Loading...
        </span>
      </span>
    </span>
    <span
      class="opacity-0  "
    >
      Email
    </span>
  </button>
</DocumentFragment>
`;
